--- a/index.html
+++ b/index.html
@@ -4,22 +4,21 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="robots" content="noindex"/>
-  <link rel="stylesheet" href="style/style.css" class="style">
+  <meta name="robots" content="noindex" />
+  <link rel="stylesheet" href="css/style.css" class="style">
   <title>Home</title>
 </head>
 
 <body>
   <div class="center"><time class="clock" id="clock"></time></div>
-
   <form autocomplete="off" class="center overlay search-form" id="search-form" spellcheck="false">
     <div>
       <input class="search-input" id="search-input" title="search" type="text" />
       <ul class="search-suggestions" id="search-suggestions"></ul>
     </div>
   </form>
-  
   <aside class="center help overlay" id="help"></aside>
-  <script src="script/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
+
 </html>
