Add SVG-Inject library

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     </div>
   </form>
   <aside class="center help overlay" id="help"></aside>
+
+  <script src="js/svg-inject.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 
