Disable text selection on clock and help

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-  <div class="center"><time class="clock" id="clock"></time></div>
+  <div class="center disable-select"><time class="clock" id="clock"></time></div>
   <form autocomplete="off" class="center overlay search-form" id="search-form" spellcheck="false">
     <div>
       <input class="search-input" id="search-input" title="search" type="text" />
       <ul class="search-suggestions" id="search-suggestions"></ul>
     </div>
   </form>
-  <aside class="center help overlay" id="help"></aside>
+  <aside class="center help overlay disable-select" id="help"></aside>
 
   <script src="js/svg-inject.min.js"></script>
   <script src="js/script.js"></script>
