Refactor and split code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="robots" content="noindex" />
+  <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css" class="style">
   <title>Home</title>
 </head>
@@ -19,8 +20,17 @@
   </form>
   <aside class="center help overlay disable-select" id="help"></aside>
 
+
   <script src="js/svg-inject.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/config.js"></script>
+  <script src="js/body.js"></script>
+  <script src="js/clock.js"></script>
+  <script src="js/form.js"></script>
+  <script src="js/help.js"></script>
+  <script src="js/influencers.js"></script>
+  <script src="js/queryParser.js"></script>
+  <script src="js/suggester.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
